compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__externals__erlang_bit_patterns.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: "\npub fn should_not_be_generated(x) {\n  case x {\n    <<_, rest:bits>> -> rest\n    _ -> x\n  }\n}\n"
---
{}
