compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__externals__inline_function.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: "\n@external(nix, \"./blah\", \"(x: x)\")\npub fn one(x: Int) -> Int {\n  1\n}\n"
---
error: Invalid Nix function
  ┌─ /src/one/two.gleam:3:1
  │
3 │ pub fn one(x: Int) -> Int {
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^

The function `one` has an external Nix implementation but the function name
`(x: x)` is not valid.
