compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__externals__module_fn.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: "\n@external(nix, \"./utils\", \"inspect\")\nfn show(x: anything) -> Nil"
---
let show = (builtins.import ./utils).inspect; in {}
