compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__externals__not_relative.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: "\n@external(nix, \"name\", \"one\")\npub fn one(x: Int) -> Int {\n  1\n}\n"
---
error: Invalid Nix module
  ┌─ /src/one/two.gleam:3:1
  │
3 │ pub fn one(x: Int) -> Int {
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^

The function `one` has an external Nix implementation but the module path
`name` is not valid. Currently, it must always be either an absolute path
(`/leading/slash.nix`) or a relative path (`./here.nix` or `../top.nix`)
with a restricted set of ASCII characters. To import from other paths, re-
export in an auxiliary Nix file instead.
